--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,3 +1,4 @@
 REACT_APP_API_URL=http://localhost:5000
 REACT_APP_SUPABASE_URL=<supabase project url>
 REACT_APP_SUPABASE_ANON_KEY=<supabase anon or public key>
+PORT=3001
